Fixed: dark mode toggle description

--- a/src/components/_Header.scss
+++ b/src/components/_Header.scss
@@ -6,6 +6,10 @@
   padding: 0 16px;
   width: 100%;
 
+  a{
+    text-decoration: none;
+    color: var(--text-color);
+  }
   &__wrapper{
     align-items: center;
     display: flex;
